; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/multiple/dos/extr_383.c_usage.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/multiple/dos/extr_383.c_usage.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [21 x i8] c"usage: %s [options]\0A\00", align 1
@.str.1 = private unnamed_addr constant [47 x i8] c"\09-d <target> Server hosting psybnc [REQUIRED]\0A\00", align 1
@.str.2 = private unnamed_addr constant [30 x i8] c"\09-f force Skip vuln checking\0A\00", align 1
@.str.3 = private unnamed_addr constant [29 x i8] c"\09-h help Your looking at it\0A\00", align 1
@.str.4 = private unnamed_addr constant [51 x i8] c"\09-n <number> Number of times to attack Default: 3\0A\00", align 1
@.str.5 = private unnamed_addr constant [46 x i8] c"\09-p <port> Port to connect to Default: 31337\0A\00", align 1
@.str.6 = private unnamed_addr constant [51 x i8] c"\09-s <size> Size of password to send Default: 9000\0A\00", align 1
@.str.7 = private unnamed_addr constant [25 x i8] c"\09-t test Tests for vuln\0A\00", align 1
@.str.8 = private unnamed_addr constant [47 x i8] c"\09-u <user> User to login with Default: pr0ix\0A\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @usage(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = load i8*, i8** %2, align 8
  %4 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0), i8* %3)
  %5 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([47 x i8], [47 x i8]* @.str.1, i64 0, i64 0))
  %6 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.2, i64 0, i64 0))
  %7 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str.3, i64 0, i64 0))
  %8 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([51 x i8], [51 x i8]* @.str.4, i64 0, i64 0))
  %9 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([46 x i8], [46 x i8]* @.str.5, i64 0, i64 0))
  %10 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([51 x i8], [51 x i8]* @.str.6, i64 0, i64 0))
  %11 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.7, i64 0, i64 0))
  %12 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([47 x i8], [47 x i8]* @.str.8, i64 0, i64 0))
  %13 = call i32 @exit(i32 1) #3
  unreachable
}

declare dso_local i32 @printf(i8*, ...) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
